--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-nav-tabs": "^0.5.7",
     "vue-router": "^3.2.0",
+    "vue-tabs": "^0.3.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
